assets/style.scss
/* ... */
.container {
  margin: 0 auto;
  max-width: 740px;
  padding: 0 10px;
  width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  color: $darkerGray;
  font-weight: bold;

  line-height: 1.7;
  margin: 1em 0 15px;
  padding: 0;
  text-align: center;

  @include mobile {
    line-height: 1.4;
  }
}

h1 {
  font-size: 30px;
  a {
    color: inherit;
  }
}

h2 {
  font-size: 24px;
}

@media (min-width: 769px){
	.post h2::before, .post h2::after {
	    content: "";
	    display: inline-block;
	    vertical-align: middle;
	    width: 46px;
	    height: 1px;
	    background: rgb(192, 211, 218);
	    margin: 0px 30px;
	}
}

h3 {
  font-size: 20px;
}

h4 {
  font-size: 18px;
  color: #222;
}

p {
  margin: 15px 0;
}

table {
	padding: 0;
}

table tr {
	border-top: 1px solid #cccccc;
	background-color: white;
	margin: 0;
	padding: 0;
}

table tr:nth-child(2n) {
	background-color: #f8f8f8;
}

table tr th {
	font-weight: bold;
	border: 1px solid #cccccc;
	text-align: left;
	margin: 0;
	padding: 6px 13px;
}

table tr td {
	border: 1px solid #cccccc;
	text-align: left;
	margin: 0;
	padding: 6px 13px;
}

table tr th :first-child,
table tr td :first-child {
	margin-top: 0;
}

table tr th :last-child,
table tr td :last-child {
	margin-bottom: 0;
}

/*.detailed .entry p:first-of-type:first-letter {
    float: left;
    margin: 0.13em 0.05em 0 -0.05em;
    font-size: 3.333em;
    line-height: 0.75em;
}*/

#search-container {
  text-align: center;
}

#search-input {
  width: 80%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 18px;
  background-color: #fff3ff;
}

.share-box {
  font-weight: bold;
  color: #222;
}

span[data-pullquote] {
  display: block;

  @include mobile {
    display: none;
  }
}

span[data-pullquote]:before {
  content: attr(data-pullquote);
  float: right;
  width: 200px;
  margin: 0 0 0.5em 30px;
  padding: 0 -5% 0 0;
  font-size: 1.3em;
  font-style: italic;
  color: green;
  text-align: center;
}

a {
  color: $blue;
  text-decoration: none;
	cursor: pointer;
  &:hover, &:active {
    color: $blue;
  }
}

ul, ol {
  margin: 15px 0;
  padding-left: 30px;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

img {
  max-width: 100%;
}

p > img {
  text-align: center;
  display: block;
  margin: 0 auto;
}

// Fixes images in popup boxes from Google Translate
.gmnoprint img {
  max-width: none;
}

.date {
  font-style: italic;
  color: $gray;
}

// Specify the color of the selection
::-moz-selection {
  color: $black;
  background: $lightGray;
}
::selection {
  color: $black;
  background: $lightGray;
}

// Nicolas Gallagher's micro clearfix hack
// http://nicolasgallagher.com/micro-clearfix-hack/
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/

//
// .masthead
//

.wrapper-masthead {
  margin-bottom: 25px;
}

.masthead {
  padding: 20px 0;
  border-bottom: 1px solid $lightGray;

  @include mobile {
    text-align: center;
  }
}

.site-avatar {
  float: left;
  width: 70px;
  height: 70px;
  margin-right: 15px;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }

  img {
    border-radius: 5px;
  }
}

.site-info {
  float: left;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }
}

.site-name {
  margin: 0;
  color: $darkGray;
  cursor: pointer;
  font-family: $helveticaNeue;
  font-weight: 300;
  font-size: 28px;
  letter-spacing: 1px;
  text-align: left;

  @include mobile {
    text-align: center;
  }
}

.site-description {
  margin: -5px 0 0 0;
  color: $gray;
  font-size: 16px;

  @include mobile {
    margin: 3px 0;
  }
}

nav {
  float: right;
  margin-top: 23px; // @TODO: Vertically middle align
  font-family: $helveticaNeue;
  font-size: 18px;

  @include mobile {
    float: none;
    margin-top: 9px;
    display: block;
    font-size: 16px;
  }

  a {
    margin-left: 20px;
    color: $darkGray;
    text-align: right;
    font-weight: 300;
    letter-spacing: 1px;

    @include mobile {
      margin: 0 10px;
      color: $blue;
    }
  }
}

//
// .main
//

.posts > .post {
  padding-bottom: 2em;
  border-bottom: 1px solid $lightGray;
  text-align: left;
}

.posts > .post:last-child {
  padding-bottom: 1em;
  border-bottom: none;
}

.post {
  blockquote {
    margin: 1.8em .8em;
    /*border-left: 2px solid $gray;*/
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
    background-color: #ede1ff;
  }

  .you-may-like{
    margin: 1.8em .8em;
    /*border-left: 2px solid $gray;*/
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
    background-color: #ddffb5;;
  }

  .comments {
    margin-top: 10px;
  }

  .read-more {
    text-transform: uppercase;
    font-size: 15px;
  }
}

.wrapper-container {
  min-height: 100%;
  position: relative;
}

.wrapper-main {
  padding-bottom: 134px;
}

.wrapper-footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 89px;
  background-color: $lightGray;
}

footer {
  padding: 20px 0;
  text-align: center;
}

body:after {
    background: linear-gradient(to right, #ffffff   0, #2196F3   33%, #E91E63   66%, #000 100%);
    width: 100%;
    height: 5px;
    top: 0;
    position: absolute;
    left: 0;
    content: '';
}

#bar {
    background: #000;
    height: 7px;
    background-size: cover;
    background-position: left 60%;
    position: fixed;
    top: 0;
    width: 100%;
    overflow: hidden;
    z-index: 1000;
}
/* ... */

